# SIEWLangC

./: .gitignore  CMakeLists.txt
apps/siewc/: main.c
include/siew/: chunk.h  common.h  compiler.h  debug.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
siew_testing_scripts/: expressionsTest.sw  scannerTesting.sw  stringTest.sw
src/compiler/: compiler.c  scanner.c
src/core/: chunk.c  memory.c  object.c  table.c  value.c
src/vm/: debug.c  vm.c
